# src/repositories/career/entities/career.entity.ts
@@ -6,7 +6,7 @@ import {
 } from 'typeorm';
 
 import { IdEntity } from '../../base';
-import { Department } from '../../departament/entities';
+import { Department } from '../../department/entities';
 
 @Entity()
 export class Career extends IdEntity {
@@ -23,7 +23,7 @@ export class Career extends IdEntity {
   @Column({ nullable: false, unique: true })
   abbreviation!: string;
 
-  @ManyToOne(() => Department, (departament) => departament.id)
+  @ManyToOne(() => Department, (department) => department.id)
   @JoinColumn()
   department?: Department;
 }
