# src/repositories/user/entities/user.entity.ts
@@ -10,7 +10,7 @@ import {
 import { ApiHideProperty } from '@nestjs/swagger';
 
 import { IdEntity } from '../../base';
-import { Department } from '../../departament';
+import { Department } from '../../department';
 import { School } from '../../school';
 import { Teacher } from '../../teacher';
 import { Roles } from '../enums';
